--- a/ui/ui_main.ui
+++ b/ui/ui_main.ui
@@ -37,7 +37,7 @@
     <rect>
      <x>120</x>
      <y>10</y>
-     <width>401</width>
+     <width>321</width>
      <height>30</height>
     </rect>
    </property>
@@ -45,7 +45,7 @@
   <widget class="QPushButton" name="btn_receipt_folder">
    <property name="geometry">
     <rect>
-     <x>530</x>
+     <x>450</x>
      <y>10</y>
      <width>75</width>
      <height>30</height>
@@ -58,7 +58,7 @@
   <widget class="QPushButton" name="btn_execute">
    <property name="geometry">
     <rect>
-     <x>610</x>
+     <x>530</x>
      <y>10</y>
      <width>75</width>
      <height>30</height>
@@ -86,6 +86,19 @@
      <width>481</width>
      <height>281</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="btn_save">
+   <property name="geometry">
+    <rect>
+     <x>610</x>
+     <y>10</y>
+     <width>75</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>저장</string>
    </property>
   </widget>
  </widget>
