--- a/assets/style.css
+++ b/assets/style.css
@@ -106,3 +106,8 @@ ol, ul {
   background-color: #007bff;
   color: #fff;
 }
+
+section {
+  /* 네비바 높이만큼(예: 60px) 스크롤 마진을 준다 */
+  scroll-margin-top: 60px;
+}
