--- a/assets/style.css
+++ b/assets/style.css
@@ -16,6 +16,7 @@ h2 {
   font-size: 1.5rem;
   border-bottom: 2px solid #ddd;
   padding-bottom: 0.3rem;
+  scroll-margin-top: 60px;
 }
 ol, ul {
   margin-left: 1.2rem;
